# verdict-dfir-community

./: .dockerignore  .gitattributes  .gitignore  .mcp.json  .mcp.json.sift  .yamllint  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  INSTALL.md  NOTICE  QUICKSTART.md  README.md  SECURITY.md  install.sh  llms.txt  mkdocs.yml  pnpm-lock.yaml  requirements.txt  rust-toolchain.toml
.claude/: settings.json
.github/: CODEOWNERS  actionlint.yaml  dependabot.yml  pull_request_template.md
VERDICT_DFIR_SVG_Assets_v2/: BRAND_DESIGN_PROMPT.md  QA_REPORT.md  SVG_ASSET_LIST.md  USAGE_GUIDE.md
agent-config/: AGENTS.md  EXPERT.md  GROUNDING.md  HEARTBEAT.md  JUDGING.md  MEMORY.md  PLAYBOOK.md  SOUL.md  TOOLS.md  expert-rules.json
ci/: gitlab-release-on-tag.yml
docker/: l1-compose.yml  l1-devbase.Dockerfile  l2-siftlite.Dockerfile
docs/: DATASET.md  README.md  accuracy-report.md  agent-containment.md  architecture.md  artifact-semantics.md  brand.md  codex-compatibility.md  commercial.md  community-response.md  contribution-model.md  cryptographic-attestation.md  evidence-answer-keys.md  extending-the-tool-surface.md  fact-fidelity-notes.md  fact-fidelity.md  false-positives.md  finding-to-action.md  glossary.md  help-wanted.md  index.md  investigation-phases.md  live-test-matrix.md  onboarding.md  provability-standard.md  red-team-challenge.md  release-surface.md  releasing.md  replay-determinism.md  repo-layout.md  troubleshooting.md  trust-benchmark.md  trust-leaderboard.md  verdict-semantics.md
packer/: sift-microvm.pkr.hcl
scripts/: _report_style.css  agent-mcp-smoke.py  build-checker.py  build-local.sh  build-offline-report.py  check-corroboration.py  claude  codegen-events.py  codex-dashboard.ps1  codex-dashboard.sh  competitor-watch.sh  containment-smoke.py  divergence-smoke.py  doctor.sh  egnyte-corpus.srl-2018.json  entailment-demo.py  evidence-agnostic-smoke.py  expert-miss-rate.py  extract-mem-archives.sh  fetch-fixtures.sh  find-evil  (+93 more)
services/agent/: README.md  pyproject.toml
services/agent/findevil_agent/: __init__.py  accuracy.py  case_paths.py  config.py  contradiction.py  correlator.py  entailment.py  events.py  execution_claim.py  judge.py  llm.py  mcp_client.py  playbook.py  replay.py  verifier.py
services/agent/findevil_agent/acp/: __init__.py  handoff.py
services/agent/findevil_agent/agentloop/: __init__.py  anthropic_auth.py  anthropic_provider.py  claude_cli.py  factory.py  integration.py  loop.py  mcp_tools.py  openai_provider.py  pods.py  types.py
services/agent/findevil_agent/crypto/: __init__.py  audit_log.py  manifest.py  merkle.py  signer.py
services/agent/findevil_agent/memory/: __init__.py  store.py
services/agent/findevil_agent/pools/: __init__.py  exfil.py  persistence.py
services/agent/tests/: conftest.py  test_accuracy.py  test_acp_handoff.py  test_agent_discipline.py  test_agentloop_anthropic.py  test_agentloop_anthropic_auth.py  test_agentloop_claude_cli.py  test_agentloop_factory.py  test_agentloop_integration.py  test_agentloop_loop.py  test_agentloop_mcp_tools.py  test_agentloop_openai.py  test_agentloop_pods.py  test_agentloop_types.py  test_anchor_grounding.py  test_asserted_values_contract.py  test_case_paths.py  test_cloud_audit_detectors.py  test_cloud_audit_wiring.py  test_config.py  test_confirmed_emitter_coverage.py  test_contradiction.py  test_contradiction_resolution_record.py  test_correlation_outcomes.py  test_correlator.py  test_corroboration_replay.py  test_counterfactual_ablation.py  test_crypto_audit_log.py  test_crypto_manifest.py  test_crypto_merkle.py  test_crypto_signer.py  test_disk_artifact_routing.py  test_disk_decoded_artifacts.py  test_disk_summary_path_provenance.py  test_entailment.py  test_entailment_demo.py  test_events.py  test_evidence_rebinding.py  test_evtx_resilience.py  test_evtx_summary_aggregation.py  (+56 more)
services/agent/tests/fixtures/: gate_coverage_findings.json
services/agent/tests/fixtures/cloud/: entra_signin_impossible_travel.json
services/agent_mcp/: README.md  pyproject.toml
services/agent_mcp/findevil_agent_mcp/: __init__.py  injection_self_attack.py  sanitize.py  server.py
services/agent_mcp/findevil_agent_mcp/tools/: __init__.py  _base.py  accuracy_compare.py  audit_append.py  audit_verify.py  correlate_findings.py  detect_contradictions.py  expert_miss_capture.py  judge_findings.py  manifest_finalize.py  manifest_verify.py  memory_recall.py  memory_remember.py  pool_handoff.py  verify_finding.py
services/agent_mcp/tests/: conftest.py  test_accuracy_compare_tool.py  test_ach_tools.py  test_acp_tools.py  test_audit_tools.py  test_expert_miss_capture.py  test_injection_self_attack.py  test_manifest_tools.py  test_memory_tools.py  test_no_forbidden_verbs.py  test_registry.py  test_sanitize.py  test_sanitize_mirror_parity.py  test_server_boot.py  test_stdio_smoke.py  test_verify_finding_tool.py
services/agent_mcp/tests/fixtures/sanitize/: evtx-service-install.json  registry-run-key.json
services/mcp/: Cargo.toml  README.md
services/mcp/src/: lib.rs  main.rs  sanitize.rs  server.rs
services/mcp/src/crypto/: merkle.rs  mod.rs
services/mcp/src/tools/: ausearch.rs  browser_history.rs  case_open.rs  cloud_audit.rs  disk.rs  evtx_query.rs  ez_parse.rs  hayabusa_scan.rs  indx_parse.rs  journalctl_query.rs  login_accounting.rs  mac_triage.rs  mft_timeline.rs  mod.rs  nfdump_query.rs  oe_dbx_parse.rs  pcap_triage.rs  plaso_parse.rs  prefetch_parse.rs  regf.rs  registry_query.rs  suricata_eve.rs  sysmon_network_query.rs  usnjrnl_query.rs  vel_collect.rs  vol_malfind.rs  vol_pslist.rs  vol_psscan.rs  vol_psxview.rs  vol_run.rs  yara_scan.rs  zeek_summary.rs
services/mcp/tests/: browser_history_smoke.rs  bypass_paths.rs  evtx_query_smoke.rs  hayabusa_scan_smoke.rs  mft_timeline_smoke.rs  network_tools_smoke.rs  prefetch_parse_smoke.rs  registry_query_smoke.rs  tool_smoke.rs  usnjrnl_query_smoke.rs  vel_collect_smoke.rs  vol_malfind_smoke.rs  vol_pslist_smoke.rs  vol_psscan_smoke.rs  vol_psxview_smoke.rs  yara_scan_smoke.rs
(+191 files in other folders)
